Se creo la maquetación de la página para el pastelero

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pastelarte</title>
+    <title>PastelArte</title>
     <!-- Estilos -->
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- Fuentes -->
@@ -194,11 +194,9 @@
           <select name="adornos" id="adornos" class="input-medium">
             <option value="Opcion">Adornos</option>
             <option value="Chantilly">Chocolate</option>
-            <option value="Chispas">Vainilla</option>
             <option value="Chispas chocolate">Fresa</option>
             <option value="Crema pastelera">Zanahoria</option>
             <option value="Cubierto de fresa">Fresa</option>
-            <option value="Cubierto de Vainilla">Zanahoria</option>
             <option value="Ninguno">Ninguno</option>
           </select>
           <input
