--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             deliciosos y saludables que puedas encontrar
           </p><br>
           <p>¡Te invitamos a probarlos!</p>
+          <a href="./pastelero.html">Soy pastelero 👀</a>
         </div>
         <span class="image-chef"></span>
       </div>
